--- a/LoginPage/loginPageStyle.css
+++ b/LoginPage/loginPageStyle.css
@@ -1,5 +1,6 @@
 * {
     font-family: Nunito, sans-serif;
+    font-size: 1em;
 }
 
 body{
@@ -62,7 +63,12 @@ div.login-side div div.icon-container {
 
 .input-containers {
     width: 100%;
-    height: 84px;
+    height: 100%;
+    margin-bottom: 1em;
+}
+
+.inputs-container {
+    margin-bottom: 1em;
 }
 
 div.input-containers input {
@@ -84,12 +90,13 @@ div.logged-container {
 }
 
 div.logged-container input {
-    height: 20px;
-    width: 20px;
+    height: 1.5em;
+    width: 1.5em;
 }
 
 div.logged-container span {
     margin-left: 10px;
+    font-size: 1.3em;
 }
 
 .login-button {
@@ -130,6 +137,7 @@ div.signup-container {
     align-items: center;
     display: flex;
     flex-direction: column;
+    margin-top: 2em;
 }
 
 .sugestion-side-container img {
@@ -138,6 +146,10 @@ div.signup-container {
     max-width: 750px;
     margin-top: 50px;
     margin-bottom: 50px;
+}
+
+.sugestion-label{
+    font-size: 2em;
 }
 
 .sugestions {
@@ -168,7 +180,14 @@ div.signup-container {
     opacity: 100%;
 }
 
+
+
+/* Responsivity */
 @media (max-width: 1200px) {
+    * {
+        font-size: 1.1em;
+    }
+
     .sugestion-side{
         display: none;
     }
@@ -181,7 +200,32 @@ div.signup-container {
         font-size: 2em;
     }
 
-    .sigestion-side-container {
+    .input-containers {
+        margin-bottom: 1em;
+    }
 
+    .input-containers input#email {
+        height: 2.6em;
+    }
+
+    .input-containers input#password {
+        height: 2.6em;
+    }
+
+    .login-instruction {
+        font-size: 1.3em;
+    }
+
+    .login-button {
+        font-size: 1.3em;
+    }
+
+    .inputs-container {
+        margin-bottom: 70px;
+    }
+
+    .logged-container label {
+        font-size: 1.2em;
+        margin: 1em;
     }
 }
