--- a/LoginPage/loginPageStyle.css
+++ b/LoginPage/loginPageStyle.css
@@ -128,7 +128,7 @@ div.signup-container {
 
 .sugestion-side{
     background-color: #697BFF;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
 }
 
@@ -138,6 +138,7 @@ div.signup-container {
     display: flex;
     flex-direction: column;
     margin-top: 2em;
+    min-height: 300px;
 }
 
 .sugestion-side-container img {
