Made icon clickable, redirecting on home page

--- a/HomePage/homePageStyle.css
+++ b/HomePage/homePageStyle.css
@@ -227,6 +227,11 @@ div.food-category a img {
     margin-top: 25px;
 }
 
+.menu-options:hover {
+    opacity: 85%;
+    cursor: pointer;
+}
+
 .menu-options {
     width: 350px;
     height: 280px;
