--- a/css/index.css
+++ b/css/index.css
@@ -98,6 +98,10 @@ body a:hover {
     font-size: 1.1em;
 }
 
+#remember-me:checked {
+    accent-color: #4E60FF;
+}
+
 .login-button {
     width: 100%;
     height: 3.5em;
