--- a/css/products.css
+++ b/css/products.css
@@ -1,6 +1,5 @@
 * {
     font-family: Nunito, sans-serif;
-    font-size: 1em;
     padding: 0;
     margin: 0;
 }
@@ -27,7 +26,7 @@ header {
     width: 100%;
     display: flex;
     justify-content: space-around;
-    border-bottom: 1px solid #EDEEF2;
+    border-bottom: 1px solid #d2d3d6;
     margin-bottom: 2em;
 }
 
@@ -92,16 +91,15 @@ nav {
 .search-input-container a {
     background-color: #f7f8fb;
     border-radius: 50%;
-    width: 1.8em;
-    height: 1.8em;
+    width: 1.6em;
+    height: 1.6em;
     position: relative;
-    top: 2px;
-    left: 10px;
+    left: 15px;
 }
 
 .search-input-container  a img {
-    height: 1.3em;
-    width: 1.3em;
+    height: 1.1em;
+    width: 1.1em;
     position: relative;
     top: 4px;
     left: 4px;
