--- a/css/profile.css
+++ b/css/profile.css
@@ -180,7 +180,7 @@ section {
 
 .profile-setting:hover {
     background-color: #F3F4FF;
-    border: 2px solid #4E60FF;
+    outline: 2px solid #4E60FF;
 }
 
 .profile-setting:hover .profile-setting-image {
@@ -193,7 +193,7 @@ section {
     align-items: center;
     min-width: 240px;
     gap: 10px;
-    border: 1px solid #EDEEF2;
+    outline: 1px solid #EDEEF2;
     border-radius: 16px;
     height: 4em;
 }
