--- a/css/profile.css
+++ b/css/profile.css
@@ -57,8 +57,10 @@ nav {
 .search-input-container {
     background-color: #EDEEF2;
     width: 200px;
+    height: 2.5em;
+    align-items: center;
     display: flex;
-    border-radius: 16px;
+    border-radius: 12px;
 }
 
 .left-side-navbar div input {
@@ -73,15 +75,15 @@ nav {
 .search-input-container a {
     background-color: #f7f8fb;
     border-radius: 50%;
-    width: 1.6em;
-    height: 1.6em;
+    width: 2em;
+    height: 2em;
     position: relative;
-    left: 15px;
+    left: 7px;
 }
 
 .search-input-container  a img {
-    height: 1.1em;
-    width: 1.1em;
+    height: 1.5em;
+    width: 1.5em;
     position: relative;
     top: 4px;
     left: 4px;
