--- a/css/index.css
+++ b/css/index.css
@@ -74,9 +74,34 @@ body a:hover {
     height: 40px;
     border-radius: 8px;
     border: 1px solid #C7C8D2;
-    padding-left: 10px;
+    padding: 10px 10px 10px 10px;
     margin-top: 4px;
 }
+
+.show-password {
+    position: relative;
+    bottom: 35px;
+    left: 90%;
+    width: 30px;
+    z-index: 10;
+}
+
+#password {
+    padding-right: 45px;
+    box-sizing: border-box;
+}
+
+#email {
+    box-sizing: border-box;
+}
+
+#email:invalid {
+    background-color: rgba(255, 0, 0, 0.2);
+}
+
+/*#password:invalid {*/
+/*    background-color: rgba(255, 0, 0, 0.2);*/
+/*}*/
 
 .login-instruction {
     margin-bottom: 32px;
